# aurora

./: Cargo.toml  README.md
circom/: padding_test.circom
src/: lib.rs  reader.rs  utils.rs
src/aurora/: error.rs  mod.rs  tests.rs  utils.rs
test-data/: circuit.r1cs  circuit.wasm  padding_test.r1cs  padding_test.wasm  sum_of_sqrt.wasm
