[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-circom = { version = "0.1.0" }
ark-relations = { version = "^0.4.0", default-features = false }
itertools = "0.10.0"

[dev-dependencies]
ark-bn254 = { version = "^0.4.0", default-features = false }

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std/" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-circom = { git = "https://github.com/HungryCatsStudio/circom-compat" }
